# temporal-agents

./: .env  .gitignore  CLAUDE.md  NEW_TEMPORAL_PLAN_IN_THREADS.md  PROJECT_REQUIREMENTS.md  PROJECT_STRUCTURE.md  TEMPORAL_REPLACEMENT_IN_THREAD.md  alembic.ini  docker-compose.yml  main.py  opencode.md  pyproject.toml  restart.sh  restart_full.sh  start.sh  start_full.sh  stop.sh  stop_full.sh  switch_runner.sh  temporal_cli.py  todo.md
.sisyphus/run-continuation/: ses_288602f33ffeKnhQ671ekX0R8h.json
agents/: developer-zbornik.md  developer.md  devops-zbornik.md  intent_parser.md  manager.md  tester.md
alembic/: env.py
alembic/db/: 20260327T120000h_r001_hitl_requests.sql
alembic/versions/: 20260327T120000h_r001_hitl_requests.py  20260327T130000h_r002_tasks.py  20260327T140000h_r003_unify_tasks.py  20260328_r001_initial_schema.py  20260328_r002_seed_data.py  20260403_r003_conversations_and_repos.py  20260403_r003_rename_to_tickets.py  20260404_r001_initial.py
api/: main.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/pages/: App.jsx  App.test.jsx
frontend/src/services/: api.js
goals/: __init__.py  ginidocs.py  zbornik.py
lessons/: README.md  pending.md
src/temporal_agents/: command_dispatcher.py  intent_config.py  intent_parser.py
src/temporal_agents/activities/: __init__.py  agents.py  base.py  conversations.py  hitl_db.py  lesson.py  options.py  (+3 more)
tests/: conftest.py
tests/integration/: test_integration.py  test_intent_parser.py  test_intent_parser_resolve.py  test_todo_flow.py
tests/unit/: test_activities.py  test_base_workflow.py  test_command_dispatcher.py  test_hitl_db.py  test_lesson_activity.py  test_manager_workflow.py  test_project_manager_workflow.py  test_projektak_workflow.py  test_workflows.py
tools/: tool_registry.py
(+12 files in other folders)
