[project]
name = "temporal-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.13",
    "click>=8.3.1",
    "psycopg2-binary>=2.9",
    "pydantic>=2.12.5",
    "temporalio>=1.24.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require running Temporal server)",
]
